* Wed Apr 19 2017 Nick Markowski <nmarkowski@keywcorp.com> - 3.2.1-0
- In the service kill provider, not all services queried by 'Name'
  with systemctl would return a name.  That caused a break in symlink
  logic, rendering a majority of aliases to remain undetected.  Error
  detection has been added and the symlink logic has been re-worked.

* Thu Mar 23 2017 Trevor Vaughan - 3.2.0-0
- Enabled the new, kinder, svckill by setting the default mode to 'warning'
- Added a `svckill::enable` parameter to be able to disable svckill from Hiera
  easily

* Fri Mar 17 2017 Nick Miller, Ryan Russell-Yates, Liz Nemsick - 3.1.1-0
- Add acceptance test for symlinked services
- Flesh out README
- Remove OBE 'pe' requirement from metadata.json
- Update puppet version in .travis.yaml

* Fri Dec 30 2016 Dylan Cochran <dylan.cochran@onyxpoint.com> - 3.1.0-0
- Use hiera moduledata instead of a hard coded array
- Add ignore for ^pe-.*

* Sat Dec 24 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
- Updated to use the Puppet Concat module

* Thu Dec 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.0-0
- Use strongly typed parameters

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Thu Jul 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.1.3-0
- Added missing requires file and updated module to auto-generate
  lua spec file.

* Tue Jun 21 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.1.2-0
- Ensure that calling '::svckill::ignore' does not include '::svckill' by
  default.

* Tue Apr 12 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 1.1.1-0
- Updated custom type to remove deprecation warning

* Thu Mar 10 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.1.0-0